src/beutelnet/bagsearch/static/bagsearch/style.css
:root {
  color-scheme: dark;
  --color-purple: #b084f5;
  --color-lavender: #6b49a81a;
}

a[name="logo"] {
	text-decoration: none;
	color: #b084f5;
}

a:link,
a[name="footer"]{
  color: #b084f5;
  background-color: unset;
}

.searchbox {
  --target-size: 48px;
  --box-height: var(--target-size);
  --border-width: 2px;
  --border-radius: calc(var(--box-height) / 2);
  height: var(--box-height);
  max-width: 561px;
  width: 100%;
}

.searchbox input[type="search"] {
  border: var(--border-width) solid var(--dark-gray);
  border-radius: var(--border-radius);
  height: 100%; 
  width: 100%;
  padding: 10px;
  text-align:center;

  -webkit-appearance: none; /* for Safari */
  color: var(--dark-gray);
  font-family: 'Noto Sans', Verdana, sans-serif;
  font-size: 1rem;
}

.searchbox input[type="search"]::placeholder {
  text-align:center;
  opacity: 1;
} 

.purple-circle {
	fill: purple;
}

body {
  margin: 0;
  padding: 0;
  background-color: #1E1E1E; 
  color: #f0f0f0;
  font-family: system-ui, sans-serif;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 100vh;
}

h1 {
  font-weight: 300;
  font-size: 3rem;
  margin: 0;
}

footer {
    position: absolute;
    bottom: 20px;
    left: 50%;
    transform: translateX(-50%);
    font-weight: 200;
    color: #b084f5;
}

.not-visible {
	display: none;
}

.table {
	border-collapse: collapse;
	margin: 25px 0;
	font-size: 18px;
	max-width: 561px;
	min-width: 400px;
}

.table thead tr {
    font-weight: 600; /* bolder than regular rows */
	text-align: center;
	background-color: #7c5ac4; /* darker purple than row tint */
	color: #ffffff;             /* ensures white text pops */
	font-weight: bold;
	border-bottom: 2px solid var(--color-purple);
}

.table th,
.table td {
	padding:12px 15px;
}

.table tbody tr {
	border-bottom: 1px solid white;
}

.table tbody tr:nth-of-type(even) {
	background-color: var(--color-lavender);
}

.table tbody tr:last-of-type {
	border-bottom: 1px solid var(--color-purple);
}

